# ocl-info

./: .astylerc  .gitignore  .travis.yml  CMakeLists.txt  ReadMe.md  common.h  data.c  data.h  main.c
cmake/: FindOpenCL.cmake
specs/: debian.changelog  debian.control  debian.rules  oclinfo-Debian_8.0.dsc  oclinfo-xUbuntu_12.04.dsc  oclinfo-xUbuntu_14.04.dsc  oclinfo.spec
src/: common.h  data.c  data.h  main.c
